fix gap

--- a/css/styles.css
+++ b/css/styles.css
@@ -264,7 +264,7 @@ a {
   display: flex;
   width: calc((100%-48px) / 3);
   row-gap: 48px;
-  gap: 24px;
+  column-gap: 24px;
   flex-wrap: wrap;
 }
 .border-portfolio {
